Fixes after code review

--- a/visualisation_methods/3d/3dModal.jade
+++ b/visualisation_methods/3d/3dModal.jade
@@ -57,7 +57,7 @@ script.
           query_params += "&param2="+y_axis;
           query_params += "&param3="+z_axis;
       query_params += "&chart_id="+three_d_chart_counter;
-      $(three_d_chart_div).load("#{prefix}/3d?"+query_params, function(){
+      $(three_d_chart_div).load("#{prefix}/get/3d?"+query_params, function(){
         $("#busy_3d").hide();
     
         var targetOffset = $(this).offset().top;
