--- a/visualisation_methods/interaction/interactionModal.jade
+++ b/visualisation_methods/interaction/interactionModal.jade
@@ -63,7 +63,7 @@ script.
           query_params += "&param2="+y_axis;
           query_params += "&output="+outputParam;
           query_params += "&chart_id="+interaction_chart_counter;
-      $(interaction_chart_div).load("#{prefix}/interaction?"+query_params, function(){
+      $(interaction_chart_div).load("#{prefix}/get/interaction?"+query_params, function(){
         $("#busy_interaction").hide();
         var targetOffset = $(this).offset().top;
         $('html,body').animate({ scrollTop: targetOffset }, 1000);
