Changed texts related to line chart

--- a/visualisation_methods/lindev/lindevChart.jade
+++ b/visualisation_methods/lindev/lindevChart.jade
@@ -1,6 +1,6 @@
 extends ../templateChart
 block vars
-  - var subheader = "Line chart with std. dev. - " + param1 + " vs. " + param2;
+  - var subheader = "Line chart - " + param1 + " vs. " + param2;
   
 block script
   script.
