--- a/visualisation_methods/lindev/lindevModal.jade
+++ b/visualisation_methods/lindev/lindevModal.jade
@@ -1,7 +1,7 @@
 #lindevModal.reveal-modal(data-reveal=true)
   section.panel.radius.analysis-chart#lindev_charts_form
     a.close-reveal-modal &#215
-    h3.subheader Line charts (with std. dev.)
+    h3.subheader Line charts with standard deviation
 
     form
       .row
