--- a/visualisation_methods/3d/3dModal.jade
+++ b/visualisation_methods/3d/3dModal.jade
@@ -8,14 +8,14 @@
         .small-5.columns
           label(class='inline') Select first parameter
         .small-7.columns
-          select.firstParam
+          select.firstParam.moes_and_params
             each parameter in parameters_and_output
               option(value=parameter.id)= parameter.label
       .row
         .small-5.columns
           label(class='inline') Select second parameter
         .small-7.columns
-          select.secondParam
+          select.secondParam.moes_and_params
             each parameter in parameters_and_output
               option(value=parameter.id)= parameter.label
 
@@ -23,7 +23,7 @@
         .small-5.columns
           label(class='inline') Select third parameter
         .small-7.columns
-          select.thirdParam
+          select.thirdParam.moes_and_params
             each parameter in parameters_and_output
               option(value=parameter.id)= parameter.label
 
@@ -41,7 +41,6 @@ script.
   $(function() {
     $("#threeDModal").foundation("reveal", "close");
 
-    var experimentID = "#{experimentID}";
     var three_d_chart_counter = 0;
     var scripts_loaded = false;
 
@@ -52,7 +51,7 @@ script.
       var x_axis = $("#threeDModal .firstParam option:selected").val();
       var y_axis = $("#threeDModal .secondParam option:selected").val();
       var z_axis = $("#threeDModal .thirdParam option:selected").val();
-      var query_params = "id="+experimentID;
+      var query_params = "id=#{experimentID}";
           query_params += "&param1="+x_axis;
           query_params += "&param2="+y_axis;
           query_params += "&param3="+z_axis;
