--- a/visualisation_methods/lindev/lindevModal.jade
+++ b/visualisation_methods/lindev/lindevModal.jade
@@ -8,14 +8,14 @@
         .small-5.columns
           label(class='inline') Select first parameter
         .small-7.columns
-          select.firstParam
+          select.firstParam.moes_and_params
             each parameter in parameters_and_output
               option(value=parameter.id)= parameter.label
       .row
         .small-5.columns
           label(class='inline') Select second parameter
         .small-7.columns
-          select.secondParam
+          select.secondParam.moes_and_params
             each parameter in parameters_and_output
               option(value=parameter.id)= parameter.label
 
@@ -33,7 +33,6 @@ script.
   $(function() {
     $("#lindevModal").foundation("reveal", "close");
 
-    var experimentID = "#{experimentID}";
     var chart_counter = 0;
     var scripts_loaded = false;
 
@@ -44,7 +43,7 @@ script.
       var x_axis = $("#lindevModal .firstParam option:selected").val();
       var y_axis = $("#lindevModal .secondParam option:selected").val();
 
-      var query_params = "id="+experimentID;
+      var query_params = "id=#{experimentID}";
           query_params += "&param1="+x_axis;
           query_params += "&param2="+y_axis;
           query_params += "&chart_id="+chart_counter;
