Changed routes: get -> chart_instances, main -> scripts, scripts -> script_tags

--- a/visualisation_methods/interaction/interactionModal.jade
+++ b/visualisation_methods/interaction/interactionModal.jade
@@ -58,7 +58,7 @@ script.
           query_params += "&param2="+y_axis;
           query_params += "&output="+outputParam;
           query_params += "&chart_id="+interaction_chart_counter;
-      $(interaction_chart_div).load("#{prefix}/get/interaction?"+query_params, function(){
+      $(interaction_chart_div).load("#{prefix}/chart_instances/interaction?"+query_params, function(){
         $("#busy_interaction").hide();
         var targetOffset = $(this).offset().top;
         $('html,body').animate({ scrollTop: targetOffset }, 1000);
@@ -69,7 +69,7 @@ script.
     $("#interactionModal button").bind("click", function() {
       $("#busy_interaction").show();
       if(!scripts_loaded) {
-        $("#interactionModal .scripts").load("#{prefix}/scripts/interaction", function(){
+        $("#interactionModal .scripts").load("#{prefix}/script_tags/interaction", function(){
           load_chart();
           scripts_loaded = true;
         });
