--- a/visualisation_methods/3d/3dModal.jade
+++ b/visualisation_methods/3d/3dModal.jade
@@ -80,7 +80,7 @@ script.
     $("#threeDModal button").bind("click", function() {
       $("#busy_3d").show();
       if(!scripts_loaded) {
-        $("#threeDModal .scripts").load("#{prefix}/script_tags/3d", function() {
+        $("#threeDModal .scripts").load("#{prefix}/script_tags/3d?base_url=#{prefix}", function() {
           load_chart();
           scripts_loaded = true;
         });
