--- a/visualisation_methods/interaction/interactionModal.jade
+++ b/visualisation_methods/interaction/interactionModal.jade
@@ -69,7 +69,7 @@ script.
     $("#interactionModal button").bind("click", function() {
       $("#busy_interaction").show();
       if(!scripts_loaded) {
-        $("#interactionModal .scripts").load("#{prefix}/script_tags/interaction", function(){
+        $("#interactionModal .scripts").load("#{prefix}/script_tags/interaction?base_url=#{prefix}", function(){
           load_chart();
           scripts_loaded = true;
         });
