--- a/visualisation_methods/lindev/lindevModal.jade
+++ b/visualisation_methods/lindev/lindevModal.jade
@@ -66,7 +66,7 @@ script.
     $("#lindevModal button").bind("click", function() {
       $("#busy_lindev").show();
       if(!scripts_loaded) {
-        $("#lindevModal .scripts").load("#{prefix}/script_tags/lindev", function(){
+        $("#lindevModal .scripts").load("#{prefix}/script_tags/lindev?base_url=#{prefix}", function(){
           load_chart();
           scripts_loaded = true;
         });
