--- a/visualisation_methods/templateChart.jade
+++ b/visualisation_methods/templateChart.jade
@@ -3,9 +3,11 @@ section.panel.radius.plot
   h3.subheader #{subheader}
 
   .row
-    span.button Hide chart
+    span.button.hide Hide chart
 
   br
+
+  block content
 
   .chart
 
