--- a/visualisation_methods/clustering/clusteringModal.jade
+++ b/visualisation_methods/clustering/clusteringModal.jade
@@ -6,7 +6,7 @@
     form
       .row
         label(class='inline') Select output parameters:
-        ul(style='list-style-type:none').outputParams
+        ul(style='list-style-type:none').outputParams.moes_ul_list
           each parameter in outputs
             li
               label
